[DXP-647] Binary data support